[project]
name = "pax-report"
version = "0.1.0"
description = "MCP server for tracking development activity and generating personalized learning reports"
authors = [{name = "Dhilan", email = "atx.dhilan@gmail.com"}]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["mcp", "learning", "development-tracking", "tutorials"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
  "fastmcp",
  "requests",
  "pydantic",
  "python-dotenv",
]

[project.scripts]
pax-report-mcp = "server:main"

[project.urls]
Homepage = "https://github.com/gambitinc/pax"
Repository = "https://github.com/gambitinc/pax"
Issues = "https://github.com/gambitinc/pax/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
only-include = ["server.py"]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = []
